k8s/workloads/homebox/manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homebox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: homebox
  labels:
    app: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: homebox
          image: ghcr.io/sysadminsmedia/homebox
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7745
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: v1
kind: Service
metadata:
  namespace: homebox
  name: homebox
spec:
  ports:
    - port: 80
      targetPort: 7745
  selector:
    app: homebox
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homebox
  namespace: homebox
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homebox.remini.site`)
      kind: Rule
      services:
        - name: homebox
          port: 80
